Fix get upload + Protection + fix css alluploads & scrollbar

--- a/app/stylesheets/style.css
+++ b/app/stylesheets/style.css
@@ -147,8 +147,7 @@ footer
 	position: absolute;
 	top: 0;
 	right: -202px;
-	overflow-y: scroll;
-	overflow-x: hidden;
+	overflow: auto;
 
 	width: 200px;
 	height: 100%;
@@ -272,12 +271,14 @@ footer
 .upload
 {
 	font-size: 10pt;
+	overflow: auto;
 }
 
 .upload > *
 {
 	width: 100%;
 	line-height: 25px;
+	width: 100%;
 }
 
 .upload .uploadHeader
@@ -303,7 +304,9 @@ footer
 
 	font-weight: bold;
 	font-size: 11pt;
-	padding: 0px 5px;
+	padding-left: 3%;
+
+	width: 97%;
 }
 
 .uploadCode .uploadButton
@@ -315,7 +318,7 @@ footer
 .uploadCode .uploadButton.deleteButton
 {
 	background: url('/images/iconDelete.png');
-	right: 20px;
+	right: 10px;
 
 	width: 25px;
 	height: 19px;
@@ -324,7 +327,7 @@ footer
 .uploadCode .uploadButton.protectButton, .uploadCode .uploadButton.protectButton.disabled
 {
 	background: url('/images/iconProtect.png');
-	right: 55px;
+	right: 45px;
 
 	width: 20px;
 	height: 20px;
